add xgboost script

--- a/Python/pgm/intermediateProgramming/001_numpy.ipynb
+++ b/Python/pgm/intermediateProgramming/001_numpy.ipynb
@@ -227,6 +227,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a= np.array([1,2])\n",
+    "b= np.array([[3,4],[5,6]])\n",
+    "a + b\n",
+    "a[:, np.newaxis] + b"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 54,
    "metadata": {},
    "outputs": [
@@ -307,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -379,9 +391,6 @@
     }
    ],
    "source": [
-    "from hmac import new\n",
-    "\n",
-    "\n",
     "arr= np.random.randn(3, 4, 5)\n",
     "axis2_mean= arr.mean(axis=2)\n",
     "axis2_mean\n",
@@ -3957,7 +3966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -4010,9 +4019,6 @@
    ],
    "source": [
     "# partial sorting\n",
-    "from numpy import indices\n",
-    "\n",
-    "\n",
     "np.random.seed(12345)\n",
     "arr= np.random.randn(20)\n",
     "arr\n",
