--- a/Python/pgm/machineLearning/012_XGBoost.ipynb
+++ b/Python/pgm/machineLearning/012_XGBoost.ipynb
@@ -2,10 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# https://xgboost.readthedocs.io/en/stable/python/python_intro.html#install-xgboost\n",
     "import xgboost as xgb\n",
     "from sklearn import datasets"
    ]
