--- a/Python/pgm/projectEuler/0002_p2.ipynb
+++ b/Python/pgm/projectEuler/0002_p2.ipynb
@@ -47,11 +47,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.int64(4613732)"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# use generators to create Fibonacci numbers and numpy to sum even numbers\n",
+    "# Solution: use generators to create Fibonacci numbers and numpy to sum even numbers\n",
     "def fibonacci():\n",
     "    \"\"\"Generator for Fibonacci numbers\"\"\"\n",
     "    a= b= 1\n",
@@ -65,7 +76,7 @@
     "        break\n",
     "    series.append(num)\n",
     "\n",
-    "series\n",
+    "# series\n",
     "\n",
     "import numpy as np\n",
     "arr= np.array(series)\n",
