--- a/Python/pgm/projectEuler/0001_p1.ipynb
+++ b/Python/pgm/projectEuler/0001_p1.ipynb
@@ -35,7 +35,7 @@
     "result = sum_of_multiples(10)\n",
     "result\n",
     "result = sum_of_multiples(1000)\n",
-    "result"
+    "result\n"
    ]
   },
   {
