--- a/Python/pgm/projectEuler/0003_p3.ipynb
+++ b/Python/pgm/projectEuler/0003_p3.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -91,15 +91,58 @@
        "6857"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Solution 2\n",
+    "def optimized_largest_prime_factor(n):\n",
+    "    if n % 2 == 0:\n",
+    "        largest_factor = 2\n",
+    "        while n % 2 == 0:\n",
+    "            n //= 2\n",
+    "    else:\n",
+    "        largest_factor = 1\n",
+    "    \n",
+    "    factor = 3\n",
+    "    max_factor = math.isqrt(n)\n",
+    "    while n > 1 and factor <= max_factor:\n",
+    "        if n % factor == 0:\n",
+    "            largest_factor = factor\n",
+    "            while n % factor == 0:\n",
+    "                n //= factor\n",
+    "            max_factor = math.isqrt(n) \n",
+    "        factor += 2  \n",
+    "    \n",
+    "    if n > 1:\n",
+    "        largest_factor = n\n",
+    "    return largest_factor\n",
+    "\n",
+    "optimized_largest_prime_factor(600851475143)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6857"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Solution 3\n",
     "import numpy as np\n",
-    "def s2(n):\n",
+    "def s3(n):\n",
     "    assert n > 1, \"Input must be greater than 1\"\n",
     "    ranges= np.array(range(2, math.isqrt(n) + 1))\n",
     "    factors= ranges[n % ranges == 0]\n",
@@ -112,7 +155,38 @@
     "    return int(factors[-1])\n",
     "\n",
     "n= 600_851_475_143\n",
-    "s2(n)\n"
+    "s3(n)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "math.isqrt(36)\n",
+    "math.isqrt(37)"
    ]
   },
   {
